--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                         <i class="fas fa-envelope"></i>
                                         <div class="item-data">
                                             <h3>
-                                                <a href="mariaosuna1996@gmail.com"> Email
+                                                <a href="mailto:mariaosuna1996@gmail.com"> Email
                                                 </a>
                                             </h3>
                                             <p>
